🐛 fix calendar display bug

--- a/front/src/app/components/moodboard/moodboard-month/moodboard-month.component.html
+++ b/front/src/app/components/moodboard/moodboard-month/moodboard-month.component.html
@@ -1,8 +1,8 @@
-<app-emojis-calendar [myMate]="false" [location]="'top'" [mate]="authService.currentUserSubject.getValue()" [date]="calendarDate"></app-emojis-calendar>
+<app-emojis-calendar [myMate]="false" [location]="'top'" [date]="calendarDate"></app-emojis-calendar>
 <ion-modal [keepContentsMounted]="true">
   <ng-template>
     <ion-datetime id="datetime" size="fixed" presentation="month-year" (ionChange)="onChangeDate($event)"></ion-datetime>
   </ng-template>
 </ion-modal>
 <ion-datetime-button datetime="datetime"></ion-datetime-button>
-<app-emojis-calendar [myMate]="true" [location]="'bottom'" [mate]="coupleService.myMate" [date]="calendarDate"></app-emojis-calendar>
+<app-emojis-calendar [myMate]="true" [location]="'bottom'" [date]="calendarDate"></app-emojis-calendar>
