✅ update navbar & routing for album page

--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -16,9 +16,9 @@
       <ion-label>Mon couple</ion-label>
     </ion-tab-button>
     
-    <ion-tab-button tab="my-profile" (click)="onClickTab()">
-      <ion-img [src]="router.url.includes('my-profile') ? myProfileOnIcon : myProfileOffIcon " class="w-1/3" />
-      <ion-label>Mon profil</ion-label>
+    <ion-tab-button tab="my-album" (click)="onClickTab()">
+      <ion-img [src]="router.url.includes('my-album') ? myAlbumOnIcon : myAlbumOffIcon " class="w-1/3" />
+      <ion-label>Mon album</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
