--- a/front/src/app/components/pages/my-album/my-album.page.html
+++ b/front/src/app/components/pages/my-album/my-album.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>myProfile</ion-title>
+    <ion-title>myAlbum</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">myProfile</ion-title>
+      <ion-title size="large">myAlbum</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-button (click)="logout()">logout</ion-button>
