✅ update app navbar & add settings modal

--- a/front/src/app/components/pages/my-album/my-album.page.html
+++ b/front/src/app/components/pages/my-album/my-album.page.html
@@ -4,14 +4,38 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" id="content">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">myAlbum</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button (click)="logout()">logout</ion-button>
-  <ion-select (ionChange)="onChangeTimezone($event)" [placeholder]="authService.currentUserSubject.getValue().timezone">
-    <ion-select-option [value]="zone" *ngFor="let zone of allTimezones">{{zone}}</ion-select-option>
-  </ion-select>
+
+
+  <!-- ? Modal for settings -->
+  <ion-modal #modal presentingElement="card" [presentingElement]="presentingElement" [canDismiss]="true" trigger="openSettings">
+    <ng-template>
+
+      <!-- ? Modal header -->
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Paramètres</ion-title>
+          <ion-buttons slot="start">
+            <ion-button [strong]="true" (click)="modal.dismiss()">Annuler</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <!-- ? modal content -->
+      <ion-content class="ion-padding">
+        <app-settings (dismissLogoutEvent)="modal.dismiss()"></app-settings>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
+
+<!-- ? fab button for modal -->
+<ion-fab horizontal="end" vertical="bottom" id="openSettings">
+    <ion-fab-button>
+      <ion-icon name="cog"></ion-icon>
+    </ion-fab-button>
+</ion-fab>
