--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -13,12 +13,12 @@
 
     <ion-tab-button tab="my-couple" (click)="onClickTab()">
       <ion-img [src]="router.url.includes('my-couple') ? myCoupleOnIcon : myCoupleOffIcon " class="w-1/3" />
-      <ion-label>Mon couple</ion-label>
+      <ion-label>Couple</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="my-album" (click)="onClickTab()">
       <ion-img [src]="router.url.includes('my-album') ? myAlbumOnIcon : myAlbumOffIcon " class="w-1/3" />
-      <ion-label>Mon album</ion-label>
+      <ion-label>Album</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
