--- a/front/src/app/components/pages/my-album/my-album.page.html
+++ b/front/src/app/components/pages/my-album/my-album.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>myAlbum</ion-title>
+    <ion-title>Mon Album</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" id="content">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">myAlbum</ion-title>
+      <ion-title size="large">Mon Album</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -22,7 +22,7 @@
         <ion-toolbar>
           <ion-title>Paramètres</ion-title>
           <ion-buttons slot="start">
-            <ion-button [strong]="true" (click)="modal.dismiss()">Annuler</ion-button>
+            <ion-button [strong]="true" (click)="modal.dismiss()">Fermer</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
