--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" translucent="true" >
     <ion-tab-button tab="conversation" (click)="onClickTab()">
       <ion-img [src]="router.url.includes('conversation') ? conversationOnIcon : conversationOffIcon " class="w-1/3" />
       <ion-label>Conversation</ion-label>
@@ -11,14 +11,14 @@
       <ion-label>Moodboard</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="my-album" (click)="onClickTab()">
+      <ion-img [src]="router.url.includes('my-album') ? myAlbumOnIcon : myAlbumOffIcon " class="w-1/3" />
+      <ion-label>Album</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="my-couple" (click)="onClickTab()">
       <ion-img [src]="router.url.includes('my-couple') ? myCoupleOnIcon : myCoupleOffIcon " class="w-1/3" />
-      <ion-label>Mon couple</ion-label>
-    </ion-tab-button>
-    
-    <ion-tab-button tab="my-profile" (click)="onClickTab()">
-      <ion-img [src]="router.url.includes('my-profile') ? myProfileOnIcon : myProfileOffIcon " class="w-1/3" />
-      <ion-label>Mon profil</ion-label>
+      <ion-label>Couple</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
