--- a/front/src/app/components/settings/settings.component.html
+++ b/front/src/app/components/settings/settings.component.html
@@ -4,7 +4,7 @@
     <ion-card-content>
       <ion-card-header>
         <ion-card-title class="flex justify-center w-full">
-          Tu n'en peux plus ton mate ?
+          Tu es célibataire ?
         </ion-card-title>
       </ion-card-header>
       <div class="flex justify-center">
