--- a/front/src/app/components/album/one-day-picture/one-day-picture.component.html
+++ b/front/src/app/components/album/one-day-picture/one-day-picture.component.html
@@ -27,17 +27,17 @@
       
       <ion-card *ngIf="daysPictureService.myMate" class="max-h-1/2">
         <ion-card-content class="flex flex-col justify-center max-h-fit">
-          <ion-label class="pb-1 italic font-semibold text-center">{{publicProfileService.myMatePublicProfile?.nickname ?? couplesService.myMate?.firstname}}</ion-label>
           <img loading="lazy" *ngIf="daysPictureService.myMatesMonthPictures.has(daysPictureService.selectedDate)" class="self-center rounded-lg" [src]="daysPictureService.myMatesMonthPictures.get(daysPictureService.selectedDate)">
           <img loading="lazy" *ngIf="!daysPictureService.myMatesMonthPictures.has(daysPictureService.selectedDate)" class="rounded-lg max-h-[30vh]" src="../../../../assets/album-icons/missing-days-picture.svg">
+          <ion-label class="pt-1 italic font-semibold text-center">{{publicProfileService.myMatePublicProfile?.nickname ?? couplesService.myMate?.firstname}}</ion-label>
         </ion-card-content>
       </ion-card>
 
       <ion-card *ngIf="daysPictureService.myMate" class="max-h-1/2">
         <ion-card-content class="flex flex-col justify-center max-h-fit">
+          <ion-label class="pb-1 italic font-semibold text-center">{{publicProfileService.myPublicProfile?.nickname ?? authService.currentUserSubject.getValue().firstname}}</ion-label>
           <img loading="lazy" *ngIf="daysPictureService.myMonthPictures.has(daysPictureService.selectedDate)" class="self-center rounded-lg" [src]="daysPictureService.myMonthPictures.get(daysPictureService.selectedDate)">
           <img loading="lazy" *ngIf="!daysPictureService.myMonthPictures.has(daysPictureService.selectedDate)" class="rounded-lg max-h-[30vh]" src="../../../../assets/album-icons/missing-days-picture.svg">
-          <ion-label class="pt-1 italic font-semibold text-center">{{publicProfileService.myPublicProfile?.nickname ?? authService.currentUserSubject.getValue().firstname}}</ion-label>
         </ion-card-content>
       </ion-card>
     </ion-content>
