--- a/front/src/app/components/pages/my-couple/my-couple.page.html
+++ b/front/src/app/components/pages/my-couple/my-couple.page.html
@@ -106,6 +106,11 @@
   <ion-fab-button (click)="onClickFab()">
     <ion-icon name="pencil"></ion-icon>
   </ion-fab-button>
+  <ion-fab-list side="start">
+    <ion-fab-button id="openSettings" >
+      <ion-icon name="cog"></ion-icon>
+    </ion-fab-button>
+  </ion-fab-list>
   <ion-fab-list [side]="'top'">
     <ion-fab-button>
       <ngx-colors ngx-colors-trigger [(ngModel)]="color" (change)="onChangePrimaryColor()"></ngx-colors>
@@ -137,3 +142,24 @@
 <ion-alert [animated]="true" header="Modifie ta description !" [buttons]="myDescriptionAlertButtons"
   [inputs]="myMateDescriptionAlertInputs" trigger="triggermyDescriptionAlert">
 </ion-alert>
+
+  <!-- ? Modal for settings -->
+  <ion-modal #modal presentingElement="card" [presentingElement]="presentingElement" [canDismiss]="true"
+    trigger="openSettings">
+    <ng-template>
+
+      <!-- ? Modal header -->
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Paramètres</ion-title>
+          <ion-buttons slot="start">
+            <ion-button [strong]="true" (click)="modal.dismiss()">Fermer</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <!-- ? modal content -->
+      <ion-content class="ion-padding">
+        <app-settings (dismissLogoutEvent)="modal.dismiss()"></app-settings>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
