--- a/front/src/app/components/moodboard/emojis-calendar/emojis-calendar.component.html
+++ b/front/src/app/components/moodboard/emojis-calendar/emojis-calendar.component.html
@@ -5,7 +5,8 @@
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <img class="absolute {{location === 'top' ? 'right-0' : 'left-0' }} w-1/2 opacity-20 " [src]="mate?.publicProfile?.sex === 0 ?( location === 'top' ? boyReversedImage : boyImage ): (location === 'top' ? girlReversedImage : girlImage)"/>
+    <img class="absolute {{location === 'top' ? 'right-0' : 'left-0' }} w-1/2 opacity-20 "
+      [src]="mate?.publicProfile?.sex === 0 ?( location === 'top' ? boyReversedImage : boyImage ): (location === 'top' ? girlReversedImage : girlImage)" />
     <ion-grid [fixed]="true">
       <ion-row>
         <ion-col size="1.7" class="text-center">Mo</ion-col>
@@ -17,8 +18,10 @@
         <ion-col size="1.7" class="text-center">Su</ion-col>
       </ion-row>
       <ion-row *ngFor="let week of calendar | keyvalue">
-        <ion-col size="1.7" class="text-center" *ngFor="let day of week.value | keyvalue">
-          {{day.value ? (myMate ? daysEmojisService.allMatesMonthly.get(day.value)?.value : daysEmojisService.allMyMonthly.get(day.value)?.value) ?? day.value : ''}}
+        <ion-col size="1.7" class="text-center" id="triggerDayEmojiAlert" *ngFor="let day of week.value | keyvalue"
+          (click)="!myMate && onAddEmoji(day.value)">
+          {{day.value ? (myMate ? daysEmojisService.allMatesMonthly.get(day.value)?.value :
+          daysEmojisService.allMyMonthly.get(day.value)?.value) ?? day.value : ''}}
         </ion-col>
       </ion-row>
     </ion-grid>
