--- a/front/src/app/components/moodboard/emojis-calendar/emojis-calendar.component.html
+++ b/front/src/app/components/moodboard/emojis-calendar/emojis-calendar.component.html
@@ -1,7 +1,7 @@
 <ion-card>
   <ion-card-header>
     <ion-card-title>
-      Les emojis de {{mate?.publicProfile?.nickname}}
+      Les emojis de {{mate?.publicProfile?.nickname ?? mate?.firstname}}
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
