--- a/front/src/app/components/moodboard/moodboard-month/moodboard-month.component.html
+++ b/front/src/app/components/moodboard/moodboard-month/moodboard-month.component.html
@@ -1,7 +1,8 @@
 <app-emojis-calendar [myMate]="false" [location]="'top'" [date]="calendarDate"></app-emojis-calendar>
 <ion-modal [keepContentsMounted]="true">
   <ng-template>
-    <ion-datetime id="datetime-month" size="fixed" presentation="month-year" (ionChange)="onChangeDate($event)"></ion-datetime>
+    <ion-datetime id="datetime-month" size="fixed" presentation="month-year"
+      (ionChange)="onChangeDate($event)"></ion-datetime>
   </ng-template>
 </ion-modal>
 <ion-datetime-button datetime="datetime-month"></ion-datetime-button>
